--- a/src/app/components/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/components/profile/edit-profile/edit-profile.component.scss
@@ -128,7 +128,7 @@ form {
   }
 }
 
-@media (max-width: 655px) {
+@media (max-width: 950px) {
   .edit-profile-class {
 @include dFlex();
     background-color: white;
